Working on cell and detail VC classes

--- a/DayOne/Journal/Storyboard/Base.lproj/Main.storyboard
+++ b/DayOne/Journal/Storyboard/Base.lproj/Main.storyboard
@@ -77,7 +77,6 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Journal" id="Jeo-4x-9f3">
-                        <barButtonItem key="backBarButtonItem" title="View all Entries" id="Kvc-kp-7VB"/>
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="oVE-sZ-DrQ">
                             <connections>
                                 <segue destination="QZy-WW-PsB" kind="show" identifier="AddEntrySegue" id="tuy-pC-QZ1"/>
@@ -154,7 +153,7 @@
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         </textAttributes>
                         <textAttributes key="largeTitleTextAttributes">
-                            <fontDescription key="fontDescription" type="system" pointSize="35"/>
+                            <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
                         </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
