--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -74,16 +74,51 @@
             </objects>
             <point key="canvasLocation" x="1042.0289855072465" y="146.65178571428569"/>
         </scene>
-        <!--View Controller-->
+        <!--Title-->
         <scene sceneID="0aR-74-BvC">
             <objects>
-                <viewController id="M6T-Qd-dPJ" sceneMemberID="viewController">
+                <viewController id="M6T-Qd-dPJ" customClass="EntryDetailViewController" customModule="Journal" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="rHN-kP-Q5x">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="fCK-Ss-01T">
+                                <rect key="frame" x="20" y="158" width="374" height="704"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a title:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dnb-Sr-S9b">
+                                <rect key="frame" x="20" y="108" width="374" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="UFq-yW-dcy" firstAttribute="bottom" secondItem="fCK-Ss-01T" secondAttribute="bottom" id="197-8F-F6j"/>
+                            <constraint firstItem="dnb-Sr-S9b" firstAttribute="leading" secondItem="UFq-yW-dcy" secondAttribute="leading" constant="20" id="4tZ-SI-ZHQ"/>
+                            <constraint firstItem="dnb-Sr-S9b" firstAttribute="top" secondItem="UFq-yW-dcy" secondAttribute="top" constant="20" id="BKr-Gr-N6d"/>
+                            <constraint firstItem="fCK-Ss-01T" firstAttribute="top" secondItem="dnb-Sr-S9b" secondAttribute="bottom" constant="20" id="EN6-Bz-7Th"/>
+                            <constraint firstItem="UFq-yW-dcy" firstAttribute="trailing" secondItem="fCK-Ss-01T" secondAttribute="trailing" constant="20" id="Mj6-3e-jo5"/>
+                            <constraint firstItem="fCK-Ss-01T" firstAttribute="leading" secondItem="UFq-yW-dcy" secondAttribute="leading" constant="20" id="Ro8-bs-Zy3"/>
+                            <constraint firstItem="fCK-Ss-01T" firstAttribute="top" secondItem="dnb-Sr-S9b" secondAttribute="bottom" constant="20" id="WTd-lO-CH2"/>
+                            <constraint firstItem="UFq-yW-dcy" firstAttribute="trailing" secondItem="dnb-Sr-S9b" secondAttribute="trailing" constant="20" id="cmD-cp-aJ8"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="UFq-yW-dcy"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Title" id="u3k-MX-dCu">
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="nN4-6G-u5o">
+                            <connections>
+                                <action selector="saveButtonPressed:" destination="M6T-Qd-dPJ" id="7Pm-w7-kFc"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="textView" destination="fCK-Ss-01T" id="sze-Ei-1RK"/>
+                        <outlet property="titleTextField" destination="dnb-Sr-S9b" id="yZs-IB-McD"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="63g-gn-xsw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
