--- a/JournalCDHWRepeat/JournalCDHWRepeat/Views/Base.lproj/Main.storyboard
+++ b/JournalCDHWRepeat/JournalCDHWRepeat/Views/Base.lproj/Main.storyboard
@@ -110,7 +110,7 @@
                                             <segment title=""/>
                                         </segments>
                                     </segmentedControl>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Enter title" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gCQ-vM-z3X">
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gCQ-vM-z3X">
                                         <rect key="frame" x="0.0" y="36" width="374" height="30"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
