added moods to the ui. added a new migration in the core data model and set the default value of the mood to neutral

--- a/JournalCDHWRepeat/JournalCDHWRepeat/Views/Base.lproj/Main.storyboard
+++ b/JournalCDHWRepeat/JournalCDHWRepeat/Views/Base.lproj/Main.storyboard
@@ -105,9 +105,9 @@
                                     <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="2QJ-hz-lZY">
                                         <rect key="frame" x="0.0" y="0.0" width="374" height="29"/>
                                         <segments>
-                                            <segment title="First"/>
-                                            <segment title="Second"/>
-                                            <segment title=""/>
+                                            <segment title="😟"/>
+                                            <segment title="😐"/>
+                                            <segment title="😃"/>
                                         </segments>
                                     </segmentedControl>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gCQ-vM-z3X">
