--- a/Journal/Storyboard/Base.lproj/Main.storyboard
+++ b/Journal/Storyboard/Base.lproj/Main.storyboard
@@ -96,26 +96,37 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a title: " textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="REP-AY-h47">
-                                <rect key="frame" x="8" y="96" width="398" height="30"/>
+                                <rect key="frame" x="8" y="132" width="398" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="VCK-Ay-TCe">
-                                <rect key="frame" x="8" y="134" width="398" height="207"/>
+                                <rect key="frame" x="8" y="170" width="398" height="171"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="S4I-ak-yiN">
+                                <rect key="frame" x="8" y="96" width="398" height="29"/>
+                                <segments>
+                                    <segment title="😔"/>
+                                    <segment title="😐"/>
+                                    <segment title="🙂"/>
+                                </segments>
+                            </segmentedControl>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="REP-AY-h47" firstAttribute="top" secondItem="phq-2o-gmv" secondAttribute="top" constant="8" id="7M5-Ca-FyI"/>
+                            <constraint firstItem="phq-2o-gmv" firstAttribute="trailing" secondItem="S4I-ak-yiN" secondAttribute="trailing" constant="8" id="9FO-zE-0Na"/>
                             <constraint firstItem="phq-2o-gmv" firstAttribute="trailing" secondItem="REP-AY-h47" secondAttribute="trailing" constant="8" id="9op-Uo-3Zu"/>
                             <constraint firstItem="REP-AY-h47" firstAttribute="leading" secondItem="phq-2o-gmv" secondAttribute="leading" constant="8" id="Lbj-9n-hP5"/>
+                            <constraint firstItem="S4I-ak-yiN" firstAttribute="top" secondItem="phq-2o-gmv" secondAttribute="top" constant="8" id="UGI-5W-63y"/>
                             <constraint firstItem="phq-2o-gmv" firstAttribute="bottom" secondItem="VCK-Ay-TCe" secondAttribute="bottom" constant="521" id="WIl-lx-O0l"/>
                             <constraint firstItem="VCK-Ay-TCe" firstAttribute="leading" secondItem="phq-2o-gmv" secondAttribute="leading" constant="8" id="XtB-Jl-lL6"/>
                             <constraint firstItem="VCK-Ay-TCe" firstAttribute="top" secondItem="REP-AY-h47" secondAttribute="bottom" constant="8" id="aFj-mo-x2g"/>
+                            <constraint firstItem="REP-AY-h47" firstAttribute="top" secondItem="S4I-ak-yiN" secondAttribute="bottom" constant="8" id="h1k-cV-ip8"/>
+                            <constraint firstItem="S4I-ak-yiN" firstAttribute="leading" secondItem="phq-2o-gmv" secondAttribute="leading" constant="8" id="nmJ-JZ-2eY"/>
                             <constraint firstItem="phq-2o-gmv" firstAttribute="trailing" secondItem="VCK-Ay-TCe" secondAttribute="trailing" constant="8" id="ua8-Rg-AUI"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="phq-2o-gmv"/>
@@ -129,6 +140,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="journalTextView" destination="VCK-Ay-TCe" id="BLF-t2-dei"/>
+                        <outlet property="moodControl" destination="S4I-ak-yiN" id="2Z0-gt-uoj"/>
                         <outlet property="titleTextField" destination="REP-AY-h47" id="r0e-IU-3s1"/>
                     </connections>
                 </viewController>
